update(OH2-117 and OH2-119): update of the logic in PatientController and update PatientDTO
